# aiida-pycce

./: PyCCE_Wrapper_2D.py  README.md  pyproject.toml
aiida_pycce/calculations/: aiida_pycce.py
aiida_pycce/parsers/: aiida_pycce.py
aiida_pycce/workchain/: Chain_PyCCE.py
code/: PyCCE_Wrapper_2D.py  code_setup_pycce2d.yml
examples/: HT_2D_Hosts.py
examples/APS_Tutorial/: Diamond_NV_PyCCE_APS2026.ipynb
examples/Structures/: 2D_Phase_Au2Se2O7_241d33e8-0d4f-4184-b8d5-f91b081dfecd_9_Shifted.cif  2D_Phase_Au2Se3O10_de9775af-42c2-4079-8205-c735556a59de_6_Shifted.cif  2D_Phase_Pd2S2O8_24a3b444-8343-4306-8541-6594da7349b9_10_Shifted.cif  2D_Phase_WS2_42344cb1-c9e5-4268-a8a7-074f50b100bd_4_Shifted.cif
